changed htlm and css files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>MAD & PWA Lab</h1>
     <div class="content">
         <div class="card card1">
             <p>Flutter</p>
